--- a/app.json
+++ b/app.json
@@ -33,6 +33,14 @@
           "backgroundColor": "#ffffff"
         }
       ],
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow Eboné Essence to access your camera",
+          "microphonePermission": "Allow Eboné Essence to access your microphone",
+          "recordAudioAndroid": true
+        }
+      ],
       "expo-font"
     ],
     "experiments": {
